# media-index

./: .gitignore  Cargo.toml  LICENSE  README.md  media.db
src/: archive.rs  db.rs  main.rs  models.rs  scanner.rs  thumbs.rs
src/gui/: browser.rs  dashboard.rs  dupes.rs  maintenance.rs  mod.rs  scanner_view.rs  similar.rs
src/parsers/: audio.rs  image.rs  mod.rs  print3d.rs  video.rs
